2013-07-10    <mschimek@users.sf.net>

	* htdocs/zvbi-0.3/networks.xml: Updated from TR 101 231 EBU
	  rev. 2013-06.

2013-07-08    <mschimek@users.sf.net>

	* prepare_dox.sh, prepare_web.sh: Updated.
	* README: Added.

2006-09-21    <mschimek@users.sf.net>

	* htdocs/Zapping/News.html: Fixed wrong dates spotted by David Liontooth.

2005-11-15    <mschimek@users.sf.net>

	* htdocs/favicon.ico: Background was not transparent.

2005-11-06    <mschimek@users.sf.net>

	* templates/registernotify.tmpl: Removed the silly personal
	  topic customization suggestions.

2005-11-04    <mschimek@users.sf.net>

	* prepare_web.sh: Registration no longer required to edit
	  TWiki pages.

2005-10-07    <mschimek@users.sf.net>

	* htdocs/zvbi-0.3/networks.xml: Updated from TR 101 231 EBU
	  rev. 2005-09.

2005-01-01    <mschimek@users.sf.net>

	* cgi-bin, lib: Twiki update.

2005-09-13    <mschimek@users.sf.net>

	* cgi-bin, lib: Twiki update.

2005-05-09    <mschimek@users.sf.net>

	* backup.sh: Remove twiki diffs when done. /tmp/persistent change.

2005-03-30    <mschimek@users.sf.net>

	* cgi-bin/register (main): Modified form input names to confuse spam
	  bots.

Local Variables:
mode: change-log
coding: utf-8
left-margin: 8
fill-column: 76
End: