@@ -2,6 +2,7 @@
 <title>Zapping News</title><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" /><link rel="stylesheet" href="/twiki.css" type="text/css" /><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /></head><body bgcolor="#ffffff"><table class="header" border="0" width="100%"><tbody><tr><td width="100%"><a href="/index.html">Zapping</a> &middot; <a href="/ZVBI/index.html">ZVBI</a></td><td><a href="/index.html"><img src="/images/zapping.gif" alt="Zapping Homepage" border="0" /></a></td></tr><tr><td colspan="2"><hr /></td></tr><tr><td colspan="2"><center><a href="/Zapping/News.html">News</a> | <strong><a href="/Zapping/Download.html">Download</a></strong> | <a href="/Zapping/Screenshots.html">Screenshots</a> | <a href="http://sourceforge.net/projects/zapping">Sourceforge</a> | <img src="/images/help.png" alt="Help" border="0" height="16" width="16" /><a href="/Zapping/Help.html">Help</a></center></td></tr></tbody></table>
     <h1>Zapping News</h1>
 
+<!--
     <p><img src="/images/tip.png" alt="Tip!" border="0" height="16" width="16" /> Release notification<br />
     <a href="https://sourceforge.net/my/monitor.php">by Sourceforge</a>: <a href=
     "http://sourceforge.net/project/filemodule_monitor.php?filemodule_id=2569">Zapping</a>, <a href=
@@ -10,8 +11,16 @@
     <a href="http://freshmeat.net/faq/view/35/">by Freshmeat</a>: <a href=
     "http://freshmeat.net/subscribe/?url=%2Fprojects%2Fzapping%2F">Zapping</a>, <a href=
     "http://freshmeat.net/subscribe/?url=%2Fprojects%2Flibzvbi%2F">libzvbi</a>.</p>
-
+-->
     <dl>
+      <dt>2013-07-11 <strong>Libzvbi 0.2.34 released</strong></dt>
+
+      <dd>Thousands gathered to witness the miracle.</dd>
+
+      <dd>
+        <p></p>
+      </dd>
+
       <dt>2008-02-22 <strong>Libzvbi 0.2.28 released</strong></dt>
 
       <dd>The library is now licensed under GNU Library General Public
