@@ -1,3 +1,7 @@
+2013-07-11    <mschimek@users.sf.net>
+
+	* htdocs/Zapping/News.html: Libzvbi 0.2.34 released.
+
 2013-07-10    <mschimek@users.sf.net>
 
 	* htdocs/zvbi-0.3/networks.xml: Updated from TR 101 231 EBU
